# ardrone_autonomy_legacy

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  track.launch
cascade/: haarcascade_falkorlogo.xml  haarcascade_falkorlogopaper.xml  haarcascade_falkorlogotshirt.xml  haarcascade_falkorlogotshirt_strict.xml  lbpcascade_falkorlogo.xml  lbpcascade_falkorlogobw.xml  lbpcascade_falkorlogostrict.xml
launch/: track.launch
nodes/: ardrone_control.py  ardrone_follow.py  ardrone_teleop_joy.py  ardrone_tracker.py  pid.py  tracker.py
src/: ardrone_follow.cpp  ardrone_opencv.cpp  ardrone_teleop_key.cpp  ardrone_tracker.cpp  ardrone_tracker_control.cpp  ardrone_tracker_sim.cpp
